--- a/style.css
+++ b/style.css
@@ -5,3 +5,29 @@ body
     font-family: Arial, Helvetica, sans-serif;
     min-width: 400px;
 }
+
+input
+{
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    border: 1px solid #5f9341;
+    margin-bottom: 4px;
+}
+
+button
+{
+    background-color: #5f9341;
+    color: white;
+    font-weight: bold;
+    padding: 10px 20px;
+    border: 1px solid #5f9341;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+#delete-btn
+{
+    background-color: white;
+    color: #5f9341;
+}
