--- a/style.css
+++ b/style.css
@@ -31,3 +31,20 @@ button
     background-color: white;
     color: #5f9341;
 }
+ul
+{
+    list-style: none;
+    padding-left: 0;
+    margin-top: 20px;
+}
+
+li
+{
+    margin-top: 10px;
+}
+
+/* aims only the anchors in the list items */
+li a
+{
+    color:#5f9341;
+}
